Improvements, new features, what's next?
This commit is quite a jump from the previous commit, as I forgot to push changes once I had created the "about" form. I will still be pushing this as v0.3, and the reason for that will be reflected by the notes below.

Total changed files: 13.

Additionals:
+ Introduced Form2.cs as [2]QuickFix_about.cs.
+ Added text, button and hyperlink to [2]QuickFix_about.cs.
+ Introduced [99]QuickFix_testing.cs where functionality is to be tested without damaging the rest of the project.

Changes:
~ Renamed Form1.cs to [1]QuickFix_main.cs.
~ A [99]QuickFix_testing.cs. can be found, but is not implemented.
~ Replaced btnDebugYes functionality in favour of access to [99]QuickFix_testing.cs.

This is not the extensive list of changes, however due to the renaming of certain things, I do not think git is going to mark the changes made (as it will register as Form1 being deleted and [1]QuickFix_main being created). This is a limitation I can't beat, so as a work around, I will start including a changelog.md with the next push.

A new branch will be opening soon, and eventually this branch will become `staging-alpha`. This new branch will push with the updated UI. At that point, all references to this branch will be destroyed but will remain for educational reasons.

And here it begins to take shape!

--- a/Windows Network Reset AIO/Project_QuickFix.csproj
+++ b/Windows Network Reset AIO/Project_QuickFix.csproj
@@ -98,16 +98,34 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="[2]AboutQuickFix.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="[2]AboutQuickFix.Designer.cs">
+      <DependentUpon>[2]AboutQuickFix.cs</DependentUpon>
+    </Compile>
+    <Compile Include="[99]QuickFix_testing.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="[99]QuickFix_testing.Designer.cs">
+      <DependentUpon>[99]QuickFix_testing.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Program.cs" />
+    <Compile Include="[1]QuickFix_main.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="[1]QuickFix_main.Designer.cs">
+      <DependentUpon>[1]QuickFix_main.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="[1]QuickFix_main.resx">
+      <DependentUpon>[1]QuickFix_main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="[2]AboutQuickFix.resx">
+      <DependentUpon>[2]AboutQuickFix.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="[99]QuickFix_testing.resx">
+      <DependentUpon>[99]QuickFix_testing.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
